[tool.poetry]
name = "mts"
version = "0.1.0"
description = "An agentic crypto trading system for Hyperliquid."
authors = ["Fodé Diop <fodesdiop@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
